# CMake

./: CMakeLists.txt  README.md  main.cc  pro1.hpp  pro2.hpp  project1.cc  project2.cc  run.sh
project1/: CMakeLists.txt
project1/include/project1/: projuect1.hpp
project1/src/: project1.cc
project2/: CMakeLists.txt
project2/include/project2/: project2.hpp
project2/src/: project2.cc
